imported modile scss to all pages and added all the id pages to folders needing it

--- a/assets/scss/config.scss
+++ b/assets/scss/config.scss
@@ -9,6 +9,7 @@ $headingsFontColor: #8B8B8B;
 $lightColor: #FFFFFF;
 $darkColor: #000000;
 $redColor: #D41F26;
+$borderColor: #C4C4C4;
 
 @mixin easeOut {
   transition: all 300ms ease-in-out;
