--- a/assets/scss/mobileResponsive.scss
+++ b/assets/scss/mobileResponsive.scss
@@ -79,7 +79,7 @@
 
   .jumbotron h2 {
     text-align: center !important;
-    color: #8B8B8B;
+    color: $headingsFontColor;
     font-family: "Roboto Condensed", sans-serif;
     font-style: normal;
     font-weight: bold;
@@ -103,73 +103,73 @@
       font-size: 62px;
       line-height: 39px;
       letter-spacing: -0.05em;
-      color: #8B8B8B;
+      color: $headingsFontColor;
       margin: 40px 0;
       text-align: center;
     }
   }
 
-  #promotions-page {
 
 
-    .display {
-      height: 100%;
-      min-height: 300px;
-      max-height: 400px;
-      box-shadow: 0px 6px 25px rgba(0, 0, 0, 0.35);
-      border-radius: 0 !important;
-      background-color: $darkColor !important;
-      margin-top: 40px;
-      margin-bottom: 40px;
-    }
 
-    .display p {
-      text-align: center;
-    }
-
-    h2 {
-      font-family: $mainFont;
-      font-style: normal;
-      font-weight: bold;
-      font-size: 30px !important;
-      line-height: normal;
-      letter-spacing: 0;
-
-      color: $lightColor !important;
-    }
-
+  .display {
+    height: 100%;
+    min-height: 300px;
+    max-height: 400px;
+    box-shadow: 0px 6px 25px rgba(0, 0, 0, 0.35);
+    border-radius: 0 !important;
+    background-color: $darkColor !important;
+    margin-top: 40px;
+    margin-bottom: 40px;
   }
 
-  #blog {
-
-
-    .display {
-      height: 100%;
-      min-height: 300px;
-      max-height: 400px;
-      box-shadow: 0px 6px 25px rgba(0, 0, 0, 0.35);
-      border-radius: 0 !important;
-      background-color: $darkColor !important;
-      margin-top: 40px;
-      margin-bottom: 40px;
-    }
-
-    .display p {
-      text-align: center;
-    }
-
-    h2 {
-      font-family: $mainFont;
-      font-style: normal;
-      font-weight: bold;
-      font-size: 30px !important;
-      line-height: normal;
-      letter-spacing: 0;
-
-      color: $lightColor !important;
-    }
-
+  .display p {
+    text-align: center;
   }
+
+  h2 {
+    font-family: $mainFont;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 30px !important;
+    line-height: normal;
+    letter-spacing: 0;
+
+    color: $lightColor !important;
+  }
+
+
+
+
+
+
+  .display {
+    height: 100%;
+    min-height: 300px;
+    max-height: 400px;
+    box-shadow: 0px 6px 25px rgba(0, 0, 0, 0.35);
+    border-radius: 0 !important;
+    background-color: $darkColor !important;
+    margin-top: 40px;
+    margin-bottom: 40px;
+  }
+
+  .display p {
+    text-align: center;
+  }
+
+  h2 {
+    font-family: $mainFont;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 30px !important;
+    line-height: normal;
+    letter-spacing: 0;
+
+    color: $lightColor !important;
+  }
+
+
 
 }
 
@@ -210,7 +210,7 @@
     select {
       height: 40px;
       margin-top: 10px;
-      border: 2px solid #C4C4C4;
+      border: 2px solid $borderColor;
       box-sizing: border-box;
       border-radius: 50px;
       font-family: $mainFont;
@@ -422,7 +422,7 @@
     select {
       height: 40px;
       margin-top: 10px;
-      border: 2px solid #C4C4C4;
+      border: 2px solid $borderColor;
       box-sizing: border-box;
       border-radius: 50px;
       font-family: $mainFont;
@@ -639,7 +639,7 @@
     select {
       height: 40px;
       margin-top: 10px;
-      border: 2px solid #C4C4C4;
+      border: 2px solid $borderColor;
       box-sizing: border-box;
       border-radius: 50px;
       font-family: $mainFont;
@@ -882,191 +882,191 @@
   }
 
 
-  #services-page {
-    .jumbotron.services {
 
-      .card-deck,
-      .cards-grouppings-3,
-      .testing {
+  .jumbotron.services {
+
+    .card-deck,
+    .cards-grouppings-3,
+    .testing {
 
 
-        .card {
+      .card {
 
-          &.two-cards-seprate-titles {
-            height: 100%;
-            height: 350px;
+        &.two-cards-seprate-titles {
+          height: 100%;
+          height: 350px;
+          width: 100%;
+
+          max-width: 555px;
+
+          hr {
             width: 100%;
-
-            max-width: 555px;
-
-            hr {
-              width: 100%;
-              border: 0.75px solid $lightColor;
-              margin: 0;
-            }
-
-            .subtext {
-              font-family: $mainFont;
-              font-style: normal;
-              font-weight: normal;
-              font-size: 12px;
-              line-height: normal;
-
-              color: $lightColor;
-
-              padding: 0;
-            }
+            border: 0.75px solid $lightColor;
+            margin: 0;
           }
 
-          &.service-twelve {
-            background-image: url('~assets/img/services12.png');
-            background-repeat: no-repeat;
-            background-position: center center;
-            background-size: cover;
+          .subtext {
+            font-family: $mainFont;
+            font-style: normal;
+            font-weight: normal;
+            font-size: 12px;
+            line-height: normal;
+
+            color: $lightColor;
+
+            padding: 0;
           }
+        }
 
-          .card-end {
+        &.service-twelve {
+          background-image: url('~assets/img/services12.png');
+          background-repeat: no-repeat;
+          background-position: center center;
+          background-size: cover;
+        }
+
+        .card-end {
 
 
 
-            .btn {
-              font-family: $secondaryFont;
-              font-style: normal;
-              font-weight: normal;
-              font-size: 15px;
-              line-height: normal;
-              background-color: transparent;
-              border: $redColor 1px solid;
+          .btn {
+            font-family: $secondaryFont;
+            font-style: normal;
+            font-weight: normal;
+            font-size: 15px;
+            line-height: normal;
+            background-color: transparent;
+            border: $redColor 1px solid;
 
-              color: $lightColor;
-              padding: 6px 8px;
-            }
+            color: $lightColor;
+            padding: 6px 8px;
           }
         }
       }
     }
   }
 
-  #promotions-page {
 
 
-    .display {
-      height: 100%;
-      min-height: 300px;
-      max-height: 400px;
-      box-shadow: 0px 6px 25px rgba(0, 0, 0, 0.35);
-      border-radius: 0 !important;
-      background-color: $darkColor !important;
-      margin-top: 40px;
-      margin-bottom: 40px;
-    }
 
-    .display p {
-      text-align: center;
-    }
 
-    h2 {
-      font-family: $mainFont;
-      font-style: normal;
-      font-weight: bold;
-      font-size: 30px !important;
-      line-height: normal;
-      letter-spacing: 0;
-
-      color: $lightColor !important;
-    }
-
-    .display-inner {
-      background-color: rgba(0, 0, 0, 0.25);
-      backdrop-filter: blur(5px);
-    }
-
+  .display {
+    height: 100%;
+    min-height: 300px;
+    max-height: 400px;
+    box-shadow: 0px 6px 25px rgba(0, 0, 0, 0.35);
+    border-radius: 0 !important;
+    background-color: $darkColor !important;
+    margin-top: 40px;
+    margin-bottom: 40px;
   }
 
-  #blog {
-
-
-    .display {
-      height: 100%;
-      min-height: 300px;
-      max-height: 400px;
-      box-shadow: 0px 6px 25px rgba(0, 0, 0, 0.35);
-      border-radius: 0 !important;
-      background-color: $darkColor !important;
-      margin-top: 40px;
-      margin-bottom: 40px;
-    }
-
-    .display p {
-      text-align: center;
-    }
-
-    .block-one {
-
-      background-image: url("~assets/img/Блог1-small.png");
-      background-size: cover;
-      background-color: rgba(0, 0, 0, 0.64);
-      backdrop-filter: blur(5px);
-    }
-
-    .block-two {
-
-      background-image: url("~assets/img/Блог2-small.png");
-      background-size: cover;
-      background-color: rgba(0, 0, 0, 0.64);
-      backdrop-filter: blur(5px);
-    }
-
-    .block-three {
-
-      background-image: url("~assets/img/Блог1-small.png");
-      background-size: cover;
-      background-color: rgba(0, 0, 0, 0.64);
-      backdrop-filter: blur(5px);
-    }
-
-    h2 {
-      font-family: $mainFont;
-      font-style: normal;
-      font-weight: bold;
-      font-size: 30px !important;
-      line-height: normal;
-      letter-spacing: 0;
-
-      color: $lightColor !important;
-    }
-
-    .display-inner {
-      background-color: rgba(0, 0, 0, 0.25);
-      backdrop-filter: blur(5px);
-    }
-
+  .display p {
+    text-align: center;
   }
 
-  #shop {
+  h2 {
+    font-family: $mainFont;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 30px !important;
+    line-height: normal;
+    letter-spacing: 0;
 
-    .shop-heading-image {
+    color: $lightColor !important;
+  }
+
+  .display-inner {
+    background-color: rgba(0, 0, 0, 0.25);
+    backdrop-filter: blur(5px);
+  }
 
 
-      h1 {
-        font-size: 25px;
+
+
+
+
+  .display {
+    height: 100%;
+    min-height: 300px;
+    max-height: 400px;
+    box-shadow: 0px 6px 25px rgba(0, 0, 0, 0.35);
+    border-radius: 0 !important;
+    background-color: $darkColor !important;
+    margin-top: 40px;
+    margin-bottom: 40px;
+  }
+
+  .display p {
+    text-align: center;
+  }
+
+  .block-one {
+
+    background-image: url("~assets/img/Блог1-small.png");
+    background-size: cover;
+    background-color: rgba(0, 0, 0, 0.64);
+    backdrop-filter: blur(5px);
+  }
+
+  .block-two {
+
+    background-image: url("~assets/img/Блог2-small.png");
+    background-size: cover;
+    background-color: rgba(0, 0, 0, 0.64);
+    backdrop-filter: blur(5px);
+  }
+
+  .block-three {
+
+    background-image: url("~assets/img/Блог1-small.png");
+    background-size: cover;
+    background-color: rgba(0, 0, 0, 0.64);
+    backdrop-filter: blur(5px);
+  }
+
+  h2 {
+    font-family: $mainFont;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 30px !important;
+    line-height: normal;
+    letter-spacing: 0;
+
+    color: $lightColor !important;
+  }
+
+  .display-inner {
+    background-color: rgba(0, 0, 0, 0.25);
+    backdrop-filter: blur(5px);
+  }
+
+
+
+
+
+  .shop-heading-image {
+
+
+    h1 {
+      font-size: 25px;
+      line-height: 150px;
+
+      color: $lightColor;
+
+
+      span {
+        font-family: $mainFont;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 60px;
         line-height: 150px;
 
-        color: $lightColor;
-
-
-        span {
-          font-family: $mainFont;
-          font-style: normal;
-          font-weight: bold;
-          font-size: 60px;
-          line-height: 150px;
-
-          color: $redColor;
-        }
+        color: $redColor;
       }
     }
   }
+
 
 
 }
@@ -1174,7 +1174,7 @@
     select {
       height: 40px;
       margin-top: 10px;
-      border: 2px solid #C4C4C4;
+      border: 2px solid $borderColor;
       box-sizing: border-box;
       border-radius: 50px;
       font-family: $mainFont;
@@ -1383,25 +1383,24 @@
     }
   }
 
-  #shop {
 
-    .shop-heading-image {
-      h1 {
-        font-size: 20px;
+  .shop-heading-image {
+    h1 {
+      font-size: 20px;
+      line-height: 150px;
+
+      color: $lightColor;
+
+
+      span {
+        font-size: 60px;
         line-height: 150px;
 
-        color: $lightColor;
-
-
-        span {
-          font-size: 60px;
-          line-height: 150px;
-
-          color: $redColor;
-        }
+        color: $redColor;
       }
     }
   }
+
 
 }
 
@@ -1410,7 +1409,7 @@
     text-align: center;
 
     h2 {
-      color: #8B8B8B;
+      color: $headingsFontColor;
       font-family: "Roboto Condensed", sans-serif;
       font-style: normal;
       font-weight: bold;
@@ -1444,7 +1443,7 @@
       font-size: 50px;
       line-height: 39px;
       letter-spacing: -0.05em;
-      color: #8B8B8B;
+      color: $headingsFontColor;
       margin: 40px 0;
     }
   }
@@ -1457,88 +1456,88 @@
     }
   }
 
-  #promotions-page {
 
 
-    .display {
-      height: 100%;
-      min-height: 300px;
-      max-height: 420px;
-      box-shadow: 0px 6px 25px rgba(0, 0, 0, 0.35);
-      border-radius: 0 !important;
-      background-color: $darkColor !important;
-      margin-top: 40px;
-      margin-bottom: 40px;
-    }
 
-    .display p {
-      text-align: center;
-    }
-
-    h2 {
-      font-family: $mainFont;
-      font-style: normal;
-      font-weight: bold;
-      font-size: 28px !important;
-      line-height: normal;
-      letter-spacing: 0;
-
-      color: $lightColor !important;
-    }
-
+  .display {
+    height: 100%;
+    min-height: 300px;
+    max-height: 420px;
+    box-shadow: 0px 6px 25px rgba(0, 0, 0, 0.35);
+    border-radius: 0 !important;
+    background-color: $darkColor !important;
+    margin-top: 40px;
+    margin-bottom: 40px;
   }
 
-  #blog {
-
-
-    .display {
-      height: 100%;
-      min-height: 300px;
-      max-height: 420px;
-      box-shadow: 0px 6px 25px rgba(0, 0, 0, 0.35);
-      border-radius: 0 !important;
-      background-color: $darkColor !important;
-      margin-top: 40px;
-      margin-bottom: 40px;
-    }
-
-    .display p {
-      text-align: center;
-    }
-
-
-    h2 {
-      font-family: $mainFont;
-      font-style: normal;
-      font-weight: bold;
-      font-size: 28px !important;
-      line-height: normal;
-      letter-spacing: 0;
-
-      color: $lightColor !important;
-    }
-
+  .display p {
+    text-align: center;
   }
 
-  #shop {
+  h2 {
+    font-family: $mainFont;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 28px !important;
+    line-height: normal;
+    letter-spacing: 0;
 
-    .shop-heading-image {
-      h1 {
-        font-size: 20px;
+    color: $lightColor !important;
+  }
+
+
+
+
+
+
+  .display {
+    height: 100%;
+    min-height: 300px;
+    max-height: 420px;
+    box-shadow: 0px 6px 25px rgba(0, 0, 0, 0.35);
+    border-radius: 0 !important;
+    background-color: $darkColor !important;
+    margin-top: 40px;
+    margin-bottom: 40px;
+  }
+
+  .display p {
+    text-align: center;
+  }
+
+
+  h2 {
+    font-family: $mainFont;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 28px !important;
+    line-height: normal;
+    letter-spacing: 0;
+
+    color: $lightColor !important;
+  }
+
+
+
+
+
+  .shop-heading-image {
+    h1 {
+      font-size: 20px;
+      line-height: 150px;
+
+      color: $lightColor;
+
+
+      span {
+        font-size: 40px;
         line-height: 150px;
 
-        color: $lightColor;
-
-
-        span {
-          font-size: 40px;
-          line-height: 150px;
-
-          color: $redColor;
-        }
+        color: $redColor;
       }
     }
   }
+
 }
 
 @include mediaXXSm {
@@ -1558,7 +1557,7 @@
     text-align: center;
 
     h2 {
-      color: #8B8B8B;
+      color: $headingsFontColor;
       font-family: "Roboto Condensed", sans-serif;
       font-style: normal;
       font-weight: bold;
@@ -1579,7 +1578,7 @@
       font-size: 48px;
       line-height: 39px;
       letter-spacing: -0.05em;
-      color: #8B8B8B;
+      color: $headingsFontColor;
       margin: 40px 0;
     }
   }
@@ -1601,7 +1600,7 @@
       max-width: 240px;
       min-width: 240px;
       height: 343px;
-      background: #FFFFFF;
+      background: $lightColor;
       box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.35);
       border-radius: 20px;
       margin-bottom: 40px;
@@ -1614,7 +1613,7 @@
         width: 80%;
         align-self: center;
         margin: 0;
-        border: 1px solid #C4C4C4;
+        border: 1px solid $borderColor;
       }
 
       hr {
@@ -1671,82 +1670,82 @@
     }
   }
 
-  #services-page {
-    .jumbotron.services {
 
-      .card-deck,
-      .cards-grouppings-3,
-      .testing {
+  .jumbotron.services {
+
+    .card-deck,
+    .cards-grouppings-3,
+    .testing {
 
 
-        .card {
+      .card {
 
-          &.two-cards-seprate-titles {
-            height: 350px;
+        &.two-cards-seprate-titles {
+          height: 350px;
+          width: 100%;
+
+          max-width: 555px;
+
+          hr {
             width: 100%;
-
-            max-width: 555px;
-
-            hr {
-              width: 100%;
-              border: 0.75px solid $lightColor;
-              margin: 0;
-            }
-
-            .subtext {
-              font-family: $mainFont;
-              font-style: normal;
-              font-weight: normal;
-              font-size: 12px;
-              line-height: normal;
-
-              color: $lightColor;
-
-              padding: 0;
-            }
+            border: 0.75px solid $lightColor;
+            margin: 0;
           }
 
-          .card-end {
+          .subtext {
+            font-family: $mainFont;
+            font-style: normal;
+            font-weight: normal;
+            font-size: 12px;
+            line-height: normal;
+
+            color: $lightColor;
+
+            padding: 0;
+          }
+        }
+
+        .card-end {
 
 
 
-            .btn {
-              font-family: $secondaryFont;
-              font-style: normal;
-              font-weight: normal;
-              font-size: 15px;
-              line-height: normal;
-              background-color: transparent;
-              border: $redColor 1px solid;
+          .btn {
+            font-family: $secondaryFont;
+            font-style: normal;
+            font-weight: normal;
+            font-size: 15px;
+            line-height: normal;
+            background-color: transparent;
+            border: $redColor 1px solid;
 
-              color: $lightColor;
-              padding: 6px 8px;
-            }
+            color: $lightColor;
+            padding: 6px 8px;
           }
         }
       }
     }
   }
 
-  #shop {
 
-    .shop-heading-image {
-      h1 {
-        font-size: 18px;
+
+
+  .shop-heading-image {
+    h1 {
+      font-size: 18px;
+      line-height: 150px;
+
+      color: $lightColor;
+
+
+      span {
+        font-size: 30px;
         line-height: 150px;
 
-        color: $lightColor;
-
-
-        span {
-          font-size: 30px;
-          line-height: 150px;
-
-          color: $redColor;
-        }
+        color: $redColor;
       }
     }
   }
+
 }
 
 @include mediaLandscape {}
