--- a/assets/scss/servicesPages.scss
+++ b/assets/scss/servicesPages.scss
@@ -131,6 +131,7 @@ li {
   background-color: $darkColor;
   box-shadow: 0px 6px 25px rgba(0, 0, 0, 0.35);
   height: 300px;
+  padding: 0;
 }
 
 .service-time-image p {
@@ -155,6 +156,7 @@ video {
   max-width: 792px;
   height: 100%;
   max-height: 440px;
+  background-color: $darkColor;
 }
 
 img {
