--- a/assets/scss/servicesPages.scss
+++ b/assets/scss/servicesPages.scss
@@ -167,6 +167,7 @@ img {
   max-height: 300px;
   object-fit: cover;
   object-position: center;
+  box-shadow: 0px 6px 25px rgba(0, 0, 0, 0.35);
 }
 
 .contact p {
