--- a/assets/scss/config.scss
+++ b/assets/scss/config.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700|Roboto:400,500,900&display=swap&subset=cyrillic,cyrillic-ext');
+
 $backgroudColor: #ffffff;
 $primary-color: #333333;
 $secondary-color: #2C5E8E;
