updated font import

--- a/assets/scss/config.scss
+++ b/assets/scss/config.scss
@@ -5,9 +5,7 @@ $primary-color: #333333;
 $secondary-color: #2C5E8E;
 $mainFont: 'Roboto',
 sans-serif;
-$secondaryFont:'Roboto Condensed',
-'Roboto',
-sans-serif;
+$secondaryFont:'Roboto Condensed', sans-serif;
 $headingsFontColor: #8B8B8B;
 $lightColor: #FFFFFF;
 $darkColor: #000000;
