--- a/assets/scss/config.scss
+++ b/assets/scss/config.scss
@@ -22,11 +22,11 @@ $borderColor: #C4C4C4;
 // Functions
 @function set-text-color($backgroudColor) {
   @if(lightness($backgroudColor) > 40) {
-    @return #000000;
+    @return $darkColor;
   }
 
   @else {
-    @return #ffffff;
+    @return $lightColor;
   }
 }
 
