--- a/assets/fonts/fonts.css
+++ b/assets/fonts/fonts.css
@@ -1,168 +1,188 @@
-/* roboto-300 - latin_cyrillic_cyrillic-ext */
+/* roboto-100 - latin_cyrillic */
+@font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 100;
+  font-display: swap;
+  src: url('../fonts/roboto-v19-latin_cyrillic-100.eot');
+  /* IE9 Compat Modes */
+  src: local('Roboto Thin'), local('Roboto-Thin'),
+    url('../fonts/roboto-v19-latin_cyrillic-100.eot?#iefix') format('embedded-opentype'),
+    /* IE6-IE8 */
+    url('../fonts/roboto-v19-latin_cyrillic-100.woff2') format('woff2'),
+    /* Super Modern Browsers */
+    url('../fonts/roboto-v19-latin_cyrillic-100.woff') format('woff'),
+    /* Modern Browsers */
+    url('../fonts/roboto-v19-latin_cyrillic-100.ttf') format('truetype'),
+    /* Safari, Android, iOS */
+    url('../fonts/roboto-v19-latin_cyrillic-100.svg#Roboto') format('svg');
+  /* Legacy iOS */
+}
+
+/* roboto-300 - latin_cyrillic */
 @font-face {
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 300;
   font-display: swap;
-  src: url('../fonts/roboto-v19-latin_cyrillic_cyrillic-ext-300.eot');
+  src: url('../fonts/roboto-v19-latin_cyrillic-300.eot');
   /* IE9 Compat Modes */
   src: local('Roboto Light'), local('Roboto-Light'),
-    url('../fonts/roboto-v19-latin_cyrillic_cyrillic-ext-300.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/roboto-v19-latin_cyrillic-300.eot?#iefix') format('embedded-opentype'),
     /* IE6-IE8 */
-    url('../fonts/roboto-v19-latin_cyrillic_cyrillic-ext-300.woff2') format('woff2'),
+    url('../fonts/roboto-v19-latin_cyrillic-300.woff2') format('woff2'),
     /* Super Modern Browsers */
-    url('../fonts/roboto-v19-latin_cyrillic_cyrillic-ext-300.woff') format('woff'),
+    url('../fonts/roboto-v19-latin_cyrillic-300.woff') format('woff'),
     /* Modern Browsers */
-    url('../fonts/roboto-v19-latin_cyrillic_cyrillic-ext-300.ttf') format('truetype'),
+    url('../fonts/roboto-v19-latin_cyrillic-300.ttf') format('truetype'),
     /* Safari, Android, iOS */
-    url('../fonts/roboto-v19-latin_cyrillic_cyrillic-ext-300.svg#Roboto') format('svg');
+    url('../fonts/roboto-v19-latin_cyrillic-300.svg#Roboto') format('svg');
   /* Legacy iOS */
 }
 
-/* roboto-regular - latin_cyrillic_cyrillic-ext */
+/* roboto-regular - latin_cyrillic */
 @font-face {
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url('../fonts/roboto-v19-latin_cyrillic_cyrillic-ext-regular.eot');
+  src: url('../fonts/roboto-v19-latin_cyrillic-regular.eot');
   /* IE9 Compat Modes */
   src: local('Roboto'), local('Roboto-Regular'),
-    url('../fonts/roboto-v19-latin_cyrillic_cyrillic-ext-regular.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/roboto-v19-latin_cyrillic-regular.eot?#iefix') format('embedded-opentype'),
     /* IE6-IE8 */
-    url('../fonts/roboto-v19-latin_cyrillic_cyrillic-ext-regular.woff2') format('woff2'),
+    url('../fonts/roboto-v19-latin_cyrillic-regular.woff2') format('woff2'),
     /* Super Modern Browsers */
-    url('../fonts/roboto-v19-latin_cyrillic_cyrillic-ext-regular.woff') format('woff'),
+    url('../fonts/roboto-v19-latin_cyrillic-regular.woff') format('woff'),
     /* Modern Browsers */
-    url('../fonts/roboto-v19-latin_cyrillic_cyrillic-ext-regular.ttf') format('truetype'),
+    url('../fonts/roboto-v19-latin_cyrillic-regular.ttf') format('truetype'),
     /* Safari, Android, iOS */
-    url('../fonts/roboto-v19-latin_cyrillic_cyrillic-ext-regular.svg#Roboto') format('svg');
+    url('../fonts/roboto-v19-latin_cyrillic-regular.svg#Roboto') format('svg');
   /* Legacy iOS */
 }
 
-/* roboto-500 - latin_cyrillic_cyrillic-ext */
+/* roboto-500 - latin_cyrillic */
 @font-face {
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 500;
   font-display: swap;
-  src: url('../fonts/roboto-v19-latin_cyrillic_cyrillic-ext-500.eot');
+  src: url('../fonts/roboto-v19-latin_cyrillic-500.eot');
   /* IE9 Compat Modes */
   src: local('Roboto Medium'), local('Roboto-Medium'),
-    url('../fonts/roboto-v19-latin_cyrillic_cyrillic-ext-500.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/roboto-v19-latin_cyrillic-500.eot?#iefix') format('embedded-opentype'),
     /* IE6-IE8 */
-    url('../fonts/roboto-v19-latin_cyrillic_cyrillic-ext-500.woff2') format('woff2'),
+    url('../fonts/roboto-v19-latin_cyrillic-500.woff2') format('woff2'),
     /* Super Modern Browsers */
-    url('../fonts/roboto-v19-latin_cyrillic_cyrillic-ext-500.woff') format('woff'),
+    url('../fonts/roboto-v19-latin_cyrillic-500.woff') format('woff'),
     /* Modern Browsers */
-    url('../fonts/roboto-v19-latin_cyrillic_cyrillic-ext-500.ttf') format('truetype'),
+    url('../fonts/roboto-v19-latin_cyrillic-500.ttf') format('truetype'),
     /* Safari, Android, iOS */
-    url('../fonts/roboto-v19-latin_cyrillic_cyrillic-ext-500.svg#Roboto') format('svg');
+    url('../fonts/roboto-v19-latin_cyrillic-500.svg#Roboto') format('svg');
   /* Legacy iOS */
 }
 
-/* roboto-700 - latin_cyrillic_cyrillic-ext */
+/* roboto-700 - latin_cyrillic */
 @font-face {
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 700;
   font-display: swap;
-  src: url('../fonts/roboto-v19-latin_cyrillic_cyrillic-ext-700.eot');
+  src: url('../fonts/roboto-v19-latin_cyrillic-700.eot');
   /* IE9 Compat Modes */
   src: local('Roboto Bold'), local('Roboto-Bold'),
-    url('../fonts/roboto-v19-latin_cyrillic_cyrillic-ext-700.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/roboto-v19-latin_cyrillic-700.eot?#iefix') format('embedded-opentype'),
     /* IE6-IE8 */
-    url('../fonts/roboto-v19-latin_cyrillic_cyrillic-ext-700.woff2') format('woff2'),
+    url('../fonts/roboto-v19-latin_cyrillic-700.woff2') format('woff2'),
     /* Super Modern Browsers */
-    url('../fonts/roboto-v19-latin_cyrillic_cyrillic-ext-700.woff') format('woff'),
+    url('../fonts/roboto-v19-latin_cyrillic-700.woff') format('woff'),
     /* Modern Browsers */
-    url('../fonts/roboto-v19-latin_cyrillic_cyrillic-ext-700.ttf') format('truetype'),
+    url('../fonts/roboto-v19-latin_cyrillic-700.ttf') format('truetype'),
     /* Safari, Android, iOS */
-    url('../fonts/roboto-v19-latin_cyrillic_cyrillic-ext-700.svg#Roboto') format('svg');
+    url('../fonts/roboto-v19-latin_cyrillic-700.svg#Roboto') format('svg');
   /* Legacy iOS */
 }
 
-/* roboto-900 - latin_cyrillic_cyrillic-ext */
+/* roboto-900 - latin_cyrillic */
 @font-face {
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 900;
   font-display: swap;
-  src: url('../fonts/roboto-v19-latin_cyrillic_cyrillic-ext-900.eot');
+  src: url('../fonts/roboto-v19-latin_cyrillic-900.eot');
   /* IE9 Compat Modes */
   src: local('Roboto Black'), local('Roboto-Black'),
-    url('../fonts/roboto-v19-latin_cyrillic_cyrillic-ext-900.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/roboto-v19-latin_cyrillic-900.eot?#iefix') format('embedded-opentype'),
     /* IE6-IE8 */
-    url('../fonts/roboto-v19-latin_cyrillic_cyrillic-ext-900.woff2') format('woff2'),
+    url('../fonts/roboto-v19-latin_cyrillic-900.woff2') format('woff2'),
     /* Super Modern Browsers */
-    url('../fonts/roboto-v19-latin_cyrillic_cyrillic-ext-900.woff') format('woff'),
+    url('../fonts/roboto-v19-latin_cyrillic-900.woff') format('woff'),
     /* Modern Browsers */
-    url('../fonts/roboto-v19-latin_cyrillic_cyrillic-ext-900.ttf') format('truetype'),
+    url('../fonts/roboto-v19-latin_cyrillic-900.ttf') format('truetype'),
     /* Safari, Android, iOS */
-    url('../fonts/roboto-v19-latin_cyrillic_cyrillic-ext-900.svg#Roboto') format('svg');
+    url('../fonts/roboto-v19-latin_cyrillic-900.svg#Roboto') format('svg');
   /* Legacy iOS */
 }
 
-
-/* roboto-condensed-300 - latin_cyrillic_cyrillic-ext */
+/* roboto-condensed-300 - latin_cyrillic */
 @font-face {
   font-family: 'Roboto Condensed';
   font-style: normal;
   font-weight: 300;
   font-display: swap;
-  src: url('../fonts/roboto-condensed-v17-latin_cyrillic_cyrillic-ext-300.eot');
+  src: url('../fonts/roboto-condensed-v17-latin_cyrillic-300.eot');
   /* IE9 Compat Modes */
   src: local('Roboto Condensed Light'), local('RobotoCondensed-Light'),
-    url('../fonts/roboto-condensed-v17-latin_cyrillic_cyrillic-ext-300.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/roboto-condensed-v17-latin_cyrillic-300.eot?#iefix') format('embedded-opentype'),
     /* IE6-IE8 */
-    url('../fonts/roboto-condensed-v17-latin_cyrillic_cyrillic-ext-300.woff2') format('woff2'),
+    url('../fonts/roboto-condensed-v17-latin_cyrillic-300.woff2') format('woff2'),
     /* Super Modern Browsers */
-    url('../fonts/roboto-condensed-v17-latin_cyrillic_cyrillic-ext-300.woff') format('woff'),
+    url('../fonts/roboto-condensed-v17-latin_cyrillic-300.woff') format('woff'),
     /* Modern Browsers */
-    url('../fonts/roboto-condensed-v17-latin_cyrillic_cyrillic-ext-300.ttf') format('truetype'),
+    url('../fonts/roboto-condensed-v17-latin_cyrillic-300.ttf') format('truetype'),
     /* Safari, Android, iOS */
-    url('../fonts/roboto-condensed-v17-latin_cyrillic_cyrillic-ext-300.svg#RobotoCondensed') format('svg');
+    url('../fonts/roboto-condensed-v17-latin_cyrillic-300.svg#RobotoCondensed') format('svg');
   /* Legacy iOS */
 }
 
-/* roboto-condensed-700 - latin_cyrillic_cyrillic-ext */
-@font-face {
-  font-family: 'Roboto Condensed';
-  font-style: normal;
-  font-weight: 700;
-  font-display: swap;
-  src: url('../fonts/roboto-condensed-v17-latin_cyrillic_cyrillic-ext-700.eot');
-  /* IE9 Compat Modes */
-  src: local('Roboto Condensed Bold'), local('RobotoCondensed-Bold'),
-    url('../fonts/roboto-condensed-v17-latin_cyrillic_cyrillic-ext-700.eot?#iefix') format('embedded-opentype'),
-    /* IE6-IE8 */
-    url('../fonts/roboto-condensed-v17-latin_cyrillic_cyrillic-ext-700.woff2') format('woff2'),
-    /* Super Modern Browsers */
-    url('../fonts/roboto-condensed-v17-latin_cyrillic_cyrillic-ext-700.woff') format('woff'),
-    /* Modern Browsers */
-    url('../fonts/roboto-condensed-v17-latin_cyrillic_cyrillic-ext-700.ttf') format('truetype'),
-    /* Safari, Android, iOS */
-    url('../fonts/roboto-condensed-v17-latin_cyrillic_cyrillic-ext-700.svg#RobotoCondensed') format('svg');
-  /* Legacy iOS */
-}
-
-/* roboto-condensed-regular - latin_cyrillic_cyrillic-ext */
+/* roboto-condensed-regular - latin_cyrillic */
 @font-face {
   font-family: 'Roboto Condensed';
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url('../fonts/roboto-condensed-v17-latin_cyrillic_cyrillic-ext-regular.eot');
+  src: url('../fonts/roboto-condensed-v17-latin_cyrillic-regular.eot');
   /* IE9 Compat Modes */
   src: local('Roboto Condensed'), local('RobotoCondensed-Regular'),
-    url('../fonts/roboto-condensed-v17-latin_cyrillic_cyrillic-ext-regular.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/roboto-condensed-v17-latin_cyrillic-regular.eot?#iefix') format('embedded-opentype'),
     /* IE6-IE8 */
-    url('../fonts/roboto-condensed-v17-latin_cyrillic_cyrillic-ext-regular.woff2') format('woff2'),
+    url('../fonts/roboto-condensed-v17-latin_cyrillic-regular.woff2') format('woff2'),
     /* Super Modern Browsers */
-    url('../fonts/roboto-condensed-v17-latin_cyrillic_cyrillic-ext-regular.woff') format('woff'),
+    url('../fonts/roboto-condensed-v17-latin_cyrillic-regular.woff') format('woff'),
     /* Modern Browsers */
-    url('../fonts/roboto-condensed-v17-latin_cyrillic_cyrillic-ext-regular.ttf') format('truetype'),
+    url('../fonts/roboto-condensed-v17-latin_cyrillic-regular.ttf') format('truetype'),
     /* Safari, Android, iOS */
-    url('../fonts/roboto-condensed-v17-latin_cyrillic_cyrillic-ext-regular.svg#RobotoCondensed') format('svg');
+    url('../fonts/roboto-condensed-v17-latin_cyrillic-regular.svg#RobotoCondensed') format('svg');
+  /* Legacy iOS */
+}
+
+/* roboto-condensed-700 - latin_cyrillic */
+@font-face {
+  font-family: 'Roboto Condensed';
+  font-style: normal;
+  font-weight: 700;
+  font-display: swap;
+  src: url('../fonts/roboto-condensed-v17-latin_cyrillic-700.eot');
+  /* IE9 Compat Modes */
+  src: local('Roboto Condensed Bold'), local('RobotoCondensed-Bold'),
+    url('../fonts/roboto-condensed-v17-latin_cyrillic-700.eot?#iefix') format('embedded-opentype'),
+    /* IE6-IE8 */
+    url('../fonts/roboto-condensed-v17-latin_cyrillic-700.woff2') format('woff2'),
+    /* Super Modern Browsers */
+    url('../fonts/roboto-condensed-v17-latin_cyrillic-700.woff') format('woff'),
+    /* Modern Browsers */
+    url('../fonts/roboto-condensed-v17-latin_cyrillic-700.ttf') format('truetype'),
+    /* Safari, Android, iOS */
+    url('../fonts/roboto-condensed-v17-latin_cyrillic-700.svg#RobotoCondensed') format('svg');
   /* Legacy iOS */
 }
