--- a/assets/scss/servicesPages.scss
+++ b/assets/scss/servicesPages.scss
@@ -91,11 +91,11 @@ li {
   box-sizing: border-box;
   border-radius: 50px;
   text-decoration: none;
-  transition: ease-in-out 300ms;
-  -webkit-transition: ease-in-out 300ms;
-  -moz-transition: ease-in-out 300ms;
-  -ms-transition: ease-in-out 300ms;
-  -o-transition: ease-in-out 300ms;
+  transition: all ease-in-out 500ms;
+  -webkit-transition: all ease-in-out 500ms;
+  -moz-transition: all ease-in-out 500ms;
+  -ms-transition: all ease-in-out 500ms;
+  -o-transition: all ease-in-out 500ms;
 
   margin-top: 20px;
   margin-bottom: 20px;
