fixed issues with hover effects

--- a/assets/scss/servicesPages.scss
+++ b/assets/scss/servicesPages.scss
@@ -101,7 +101,7 @@ li {
   margin-bottom: 20px;
 }
 
-.btn.category-selector.btn:hover:enabled {
+.btn.category-selector.btn:hover {
   color: $lightColor;
   background-color: $redColor;
   transform: scale(1.1);
